2009-01-07  Juanma Barranquero  <lekktu@gmail.com>

	* international/mule.el (define-coding-system): Doc fix.

2009-01-07  Kenichi Handa  <handa@m17n.org>

	* international/mule.el (define-coding-system): Fix docstring
	about :bom usage.

2009-01-07  Martin Rudalics  <rudalics@gmx.at>

	* dired.el (dired-pop-to-buffer): Don't split windows
	horizontally.  (Bug#1806)

2009-01-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* tar-mode.el (tar-mode, tar-mode-write-contents)
	(tar-write-region-annotate): Undo Andreas's last change.

2009-01-06  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-do-copy-or-rename-file-directly)
	(tramp-handle-file-local-copy, tramp-handle-write-region)
	* net/tramp-smb.el (tramp-smb-handle-copy-file)
	(tramp-smb-handle-rename-file): Delete temporary file in case of quit.

2009-01-06  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (completion-hilit-commonality): Don't presume
	all-completions always include the input as prefix.
	(completion-pcm--pattern-trivial-p): Accept a few more patterns
	as trivial.
	(completion-pcm--hilit-commonality): Remove leftover code that used to
	deal with the now removed cdr-in-last-cons.

2009-01-06  Juanma Barranquero  <lekktu@gmail.com>

	* international/mule.el (define-coding-system): Fix typos in docstring.

2009-01-05  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-styles.el (c-setup-paragraph-variables):
	Ensure paragraph-\(start\|separate\) match blank lines.  For AWK Mode.

2009-01-05  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-handle-load)
	(tramp-do-copy-or-rename-file-directly)
	(tramp-handle-file-local-copy, tramp-handle-insert-file-contents)
	(tramp-handle-write-region)
	* net/tramp-smb.el (tramp-smb-handle-copy-file)
	(tramp-smb-handle-rename-file, tramp-smb-handle-write-region):
	Delete temporary file in case of error.

2009-01-05  Agustín Martín  <agustin.martin@hispalinux.es>
